# ai-video-fx

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
api/: api.py
app/: layout.js  page.js  slider.js  spinner.js
