[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ramon Meza <ramon_meza@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
torch = { version = "2.4.0", source="torch"}
torchaudio = { version = "2.4.0", source="torch"}
torchvision = { version = "0.19.0", source="torch"}
accelerate = "^0.33.0"
transformers = "^4.43.3"
python-multipart = "^0.0.9"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
